# blaulicht

./: README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  inputs.rs  lib.rs  main.rs  utils.rs
src/components/: Bulb.svelte
src/routes/: +page.svelte
static/: theme.css
