[package]
name = "blaulicht"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "blaulicht_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
beat-detector = { path = "/home/mik/Downloads/beat-detector/" }
cpal = "0.15.3"
minifb = "0.27.0"
log = "0.4.22"
simple_logger = "5.0.0"
ctrlc = "3.4.5"
tauri-plugin-websocket = "2"
async-std = "1.13.0"
serial2 = "0.2.28"
audioviz = { version = "0.4.4", features = ["serde"] }
